fix css text-align center. User margin:auto; margin:auton; margin:auto; margin:auto; margin:auto

--- a/public/CSS/sigine.css
+++ b/public/CSS/sigine.css
@@ -1,5 +1,16 @@
+
+
+html { 
+	width: 100%;  margin: auto; text-align: center; 
+}
+
+body { 
+	width: 100%; margin: auto; text-align: center; 
+}
+
 body{
 	font-size:15px;
+	
 }
 
 .custom-menu{
@@ -236,6 +247,11 @@ th{
 	margin-right: 0;
 }
 
+.input-view{
+	  margin: auto;
+  text-align: center;
+  max-width: 1100px;
+}
 
 /*for sticky footer fixed to the bottom*/
 /*http://getbootstrap.com/examples/sticky-footer-navbar/*/
